tests/paczka2/big_fuzzy/19659614.err
Error in line 1: 9JKU3 A231 44,6
Error in line 7: YASFsH4 A231 79,1
Error in line 8: YASFsH4 S716 79,5
Error in line 21: YASFsH4 A231 12,9
Error in line 18: oWLB2 S716 4,0
Error in line 35: TvAizOS S805 53,0
Error in line 38: 9gk60QQT S805 96,2
Error in line 41: TvAizOS S318 28,7
Error in line 46: oWLB2 S805 54,0
Error in line 52: YASFsH4 S716 94,5
Error in line 63: ok1wmk9h3 S716 86,9
Error in line 48: TvAizOS S716 60,0
Error in line 64: YASFsH4 S318 91,6
Error in line 55: S805 S716 43,1
Error in line 67: TvAizOS S805 25,3
Error in line 80: oWLB2 S716 6,0
Error in line 82: YASFsH4 A231 8,34
Error in line 95: 9gk60QQT S805 17,1
Error in line 100: TvAizOS S318 0<9
Error in line 96: 9JKU3 A231 57,2
Error in line 87: YASFsH4 A231 4,8
Error in line 105: YASFsH4 S318 17,8
Error in line 103: TvAizOS S318 0,9
Error in line 111: ok1wmk9h3 S318 84,7
Error in line 110: S805 S805 88,4
Error in line 107: TvAizOS A231 47,0
Error in line 127: oWLB2 S805 37,8
Error in line 146: S805 A2[1 58,6
Error in line 141: S805 S716 74,7
Error in line 145: 9gk60QQT S318 244,4
Error in line 153: 9gk60QQT S716 51,0
Error in line 156: 9gk60QQT S805 66,1
Error in line 162: TvAizOS S805 89,0
Error in line 163: TvAizOS S318 29,8
Error in line 160: YASFsH4 A231 68,9
Error in line 177: TvAizOS S805 57,8
Error in line 186: S805 S716 54,3
Error in line 192: 9gk60QQT S31_ 76,_
Error in line 194: YASFsH4 S805 12,8
Error in line 197: TvAizOS AX31 81,1
Error in line 182: TvAizOS A231 26,0
Error in line 218: TvAizOS A231 6,10
Error in line 204: ok1wmk9h3 S716 6,0
Error in line 228: S805 S(18 71,8
Error in line 220: oWLB2 A231 71,7
Error in line 243: 9JKU3 S805 57,1
Error in line 248: oWLB2 S805 -3,7
